fix(web): allow changes to the date of diaries
