# open-api/openapi-specs.json
@@ -391,15 +391,25 @@
             ],
             "example": "Today..."
           },
+          "date": {
+            "format": "date",
+            "type": "string"
+          },
+          "encryption": {
+            "example": "RSA",
+            "type": "string"
+          },
           "rating": {
             "example": 5,
             "maximum": 10,
-            "minimum": 1,
+            "minimum": 0.5,
             "type": "number"
           }
         },
         "required": [
-          "content"
+          "content",
+          "date",
+          "encryption"
         ],
         "type": "object"
       },
